[BUGFIX] Fix radio buttons of new content element wizard
This patch fix cropped radio buttons and click area of the radio buttons
in the new content element wizard.

Resolves: #78121
Releases: master
Reviewed-on: https://review.typo3.org/50241
Tested-by: Riccardo De Contardi <erredeco@gmail.com>
Tested-by: TYPO3com <no-reply@typo3.com>
Tested-by: Benni Mack <benni@typo3.org>
Tested-by: Susanne Moog <susanne.moog@typo3.org>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -12852,6 +12852,9 @@ textarea.formengine-textarea {
   padding-bottom: 0;
   border: none;
 }
+.media-new-content-element-wizard .media-left input {
+  margin-left: 2px;
+}
 .query-builder .form-inline > .form-control-clearable {
   display: inline;
 }
